// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`authDetailsResponse returns formatted data for OAuth1 APIs 1`] = `
Object {
  "accessToken": Object {
    "active": false,
    "client_id": "test-consumer-key",
    "exp": 1235,
    "iat": 1,
    "token_type": "oauth",
    "value": "test-access-token",
  },
  "callbackParams": Object {
    "callback": "param",
  },
  "consumerKey": "test-consumer-key",
  "consumerSecret": "test-consumer-secret",
  "signatureMethod": "PLAINTEXT",
  "tokenResponse": Object {
    "token": "response",
  },
  "tokenSecret": "test-token-secret",
}
`;

exports[`authDetailsResponse returns formatted data for OAuth1 APIs 2`] = `
Object {
  "accessToken": Object {
    "active": false,
    "client_id": "test-client-id",
    "exp": 1235,
    "iat": 1,
    "token_type": "bearer",
    "value": "test-access-token",
  },
  "callbackParams": Object {
    "callback": "param",
  },
  "clientId": "test-client-id",
  "clientSecret": "test-client-secret",
  "idToken": Object {
    "active": true,
    "client_id": "test-client-id",
    "iat": 1,
    "token_type": "id",
    "value": "test-id-token",
  },
  "idTokenJwt": Object {
    "jwt": "token",
  },
  "refreshToken": Object {
    "active": true,
    "client_id": "test-client-id",
    "iat": 1,
    "token_type": "refresh",
    "value": "test-refresh-token",
  },
  "tokenResponse": Object {
    "token": "response",
  },
}
`;
